Fix modal overflow issue.

--- a/src/client/src/sass/components/_modal.scss
+++ b/src/client/src/sass/components/_modal.scss
@@ -16,6 +16,7 @@
     max-width: 90vw;
     max-height: 90vh;
     padding: 3rem 2rem;
+    overflow-y: scroll;
     border-radius: $border-radius-large;
     background-color: $color-main-background;
     transition: $transition-time-medium;
